src/test/compile-fail/main-wrong-type-2.rs
// error-pattern:wrong type in main function: found `fn() -> char`
fn main() -> char { }
